# CIAstore

./: .gitignore  .pre-commit-config.yaml  LICENSE  OFL.txt  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: codeql.yml  tests.yml
src/: example.py
src/ciastore/: __init__.py  __main__.py  backups.py  create_account.py  csvrecords.py  database.py  elapsed.py  generate_pages.py  htmlgen.py  log.txt  security.py  sendmail.py  server.py
src/ciastore/static/: index.html  matrix.html  original_style.css  style.css
src/ciastore/templates/: add_tickets_get.html.jinja  add_tickets_post.html.jinja  error_page.html.jinja  exception_page.html.jinja  invite_manager_get.html.jinja  invite_manager_post.html.jinja  invite_teacher_get.html.jinja  invite_teacher_post.html.jinja  login.html.jinja  login_get.html.jinja  root.html.jinja  root_get.html.jinja  settings-change_password_get.html.jinja  settings-change_password_post.html.jinja  settings.html.jinja  settings_change_password_get.html.jinja  settings_change_password_post.html.jinja  settings_get.html.jinja  signup.html.jinja  signup_get.html.jinja  signup_post.html.jinja  subtract_tickets_get.html.jinja  subtract_tickets_post.html.jinja  template.html.jinja  ticket_count.html.jinja  ticket_count_page.html.jinja  ticket_form.html.jinja  ticket_get_form.html.jinja
src/templates/: error_page.html.jinja
tests/: test_elasped.py  test_htmlgen.py  test_security.py  test_server.py
